feat : 일반 api 제공 기능 추가
