# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api/v1
 definitions:
   model.ExpireOption:
     enum:
@@ -85,7 +84,7 @@ info:
   title: JsonJunk API
   version: "1.0"
 paths:
-  /paste:
+  /api/v1/paste:
     post:
       consumes:
       - application/json
@@ -111,7 +110,7 @@ paths:
       summary: Paste 생성
       tags:
       - pastes
-  /paste/{id}:
+  /api/v1/paste/{id}:
     delete:
       consumes:
       - application/json
@@ -195,7 +194,7 @@ paths:
       summary: Paste 업데이트
       tags:
       - pastes:test
-  /paste/list:
+  /api/v1/paste/list:
     get:
       consumes:
       - application/json
@@ -221,7 +220,7 @@ paths:
       summary: Paste 목록 조회
       tags:
       - pastes
-  /paste/type:
+  /api/v1/paste/type:
     get:
       consumes:
       - application/json
@@ -247,4 +246,21 @@ paths:
       summary: Paste expire type 조회
       tags:
       - pastes:type
+  /raw/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 데이터를 조회한다.
+      parameters:
+      - description: Paste ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: 데이터를 조회한다.
+      tags:
+      - api
 swagger: "2.0"
